I am an idiot (Fixed double request)

--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -1,6 +1,4 @@
 <form [formGroup]="nameForm" (ngSubmit)="onSubmit()">
     <input id="game-name" formControlName="name" />
-    <button type="submit" [disabled]="!nameForm.valid" (click)="onSubmit()">
-        Search
-    </button>
+    <button type="submit" [disabled]="!nameForm.valid">Search</button>
 </form>
