--- a/client/src/app/pages/search/search-page.component.html
+++ b/client/src/app/pages/search/search-page.component.html
@@ -1,6 +1,7 @@
 <div>
-    <search (games)="handleSearch($event)"></search>
-    @if (games.length > 0) { @for (game of games; track game.id) {
+    <search></search>
+    @if (this.gameHandler.games.length > 0) { @for (game of
+    this.gameHandler.games; track game.id) {
     <game [gameInput]="game"></game>
     } }
 </div>
