--- a/client/src/app/pages/search/search-page.component.html
+++ b/client/src/app/pages/search/search-page.component.html
@@ -1,5 +1,5 @@
 <div>
-    <search></search>
+    <search class="search"></search>
     @if (this.gameHandler.games.length > 0) { @for (game of
     this.gameHandler.games; track game.id) {
     <game [gameInput]="game"></game>
