--- a/client/src/app/pages/search/search-page.component.html
+++ b/client/src/app/pages/search/search-page.component.html
@@ -1,7 +1,10 @@
 <div>
     <search class="search"></search>
-    @if (this.gameHandler.games.length > 0) { @for (game of
-    this.gameHandler.games; track game.id) {
-    <game [gameInput]="game"></game>
-    } }
+    @if (this.gameHandler.games.length > 0) {
+    <div class="games">
+        @for (game of this.gameHandler.games; track game.id) {
+        <game [gameInput]="game"></game>
+        }
+    </div>
+    }
 </div>
