--- a/client/src/app/components/search/search.component.html
+++ b/client/src/app/components/search/search.component.html
@@ -4,7 +4,7 @@
             matInput
             id="game-name"
             formControlName="name"
-            placeholder="Search"
+            placeholder="Search for game..."
             (keyup.enter)="onSubmit()"
             required="true"
         />
