--- a/client/src/app/components/search/search.component.scss
+++ b/client/src/app/components/search/search.component.scss
@@ -1,3 +1,12 @@
-.search {
-    width: 100%;
+@use "@angular/material" as mat;
+
+:host {
+    .search {
+        width: 100%;
+    }
+    @include mat.form-field-overrides(
+        (
+            filled-container-shape: 10px,
+        )
+    );
 }
