Added basic login (styling not working yet)

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <main class="main">
     <nav>
+        <a routerLink="/register">Register</a>
+        |
         <a routerLink="/search">Search</a>
         |
         <a routerLink="/game">Game</a>
