Add username to client register form

--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -23,6 +23,18 @@
         </div>
         <div class="register-field">
             <mat-form-field>
+                <mat-label>Username</mat-label>
+                <input
+                    matInput
+                    id="register-username"
+                    type="username"
+                    formControlName="username"
+                    required="true"
+                />
+            </mat-form-field>
+        </div>
+        <div class="register-field">
+            <mat-form-field>
                 <mat-label>Password</mat-label>
                 <input
                     matInput
