--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,3 +1,13 @@
+@use "@angular/material" as mat;
+
 .main {
     display: grid;
+}
+
+:root {
+    @include mat.snack-bar-overrides(
+        (
+            container-color: red,
+        )
+    );
 }
